--- a/src/style/main.css
+++ b/src/style/main.css
@@ -9,6 +9,13 @@
   box-sizing: border-box;
 }
 
+div#loader {
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 footer {
   height: 40px;
   display: flex;
