--- a/src/style/navigation.css
+++ b/src/style/navigation.css
@@ -1,11 +1,11 @@
 div#nav-container {
   display: flex;
   justify-content: center;
+  background-color: #003049;
+  height: 60px;
 }
 
 div#nav-bar {
-  border: 1px solid red;
-  height: 40px;
   padding: 0 8px;
   display: flex;
   justify-content: space-between;
@@ -19,11 +19,27 @@ div#nav-bar #unit-toggle {
   font-size: 18px;
   width: 25px;
   height: 25px;
+  width: 50px;
+}
+
+div#nav-bar > button {
+  border: none;
+  background-color: #003049;
+  color: aliceblue;
+  outline: none;
+}
+
+div#nav-bar > button#unit-toggle {
+  background-color: #003049;
+  border-radius: 16px;
+  border: 1px solid aliceblue;
 }
 
 div#nav-bar #logo {
   font-size: 24px;
-  font-weight: 600;
+  font-family: 'Potta One', system-ui;
+  font-weight: 200;
+  color: aliceblue;
 }
 
 div#search-container {
