--- a/src/style/search.css
+++ b/src/style/search.css
@@ -14,6 +14,8 @@ div#search-container > button#search-btn {
 
 div#search-container > button#close-btn {
   border-radius: 8px 0 0 8px;
+  padding: 0;
+  margin: 0;
 }
 
 div#search-container > button#search-btn {
