--- a/src/style/search.css
+++ b/src/style/search.css
@@ -32,6 +32,7 @@ div#search-container > input {
   font-size: 18px;
   height: 40px;
   border: none;
+  border-radius: 0;
   padding: 8px;
   color: #003049;
   outline: none;
